# DeepLOB

./: .gitignore  pyproject.toml
jupyter_tensorflow/: commit_iteration.py  custom_label_experiment_log.md  custom_label_iteration_ideas.md  run_custom_label_iteration.py  run_train_cnnlob_2017.ipynb  run_train_cnnlob_2017_custom_labels_k20.ipynb  run_train_tensorflow-version2.ipynb
jupyter_tensorflow/iteration_results/: iter01_h2_a0005_current_future.json  iter02_h2_a0001_current_future.json  iter03a_h2_a0001_current_future_cw_e4.json  iter04_h2_a0001_current_future_cw05_e4.json  iter05_h2_a0001_current_future_cw075_e4.json  iter06_h2_a0001_current_future_cw065_e4.json  iter07_h2_a0001_current_future_cw08_e4.json  iter08_h2_a0001_current_future_cw075_e8.json  iter09_h2_a1e6_past_future_e8.json  iter10a_h2_a1e6_past_future_cw05_e4.json
jupyter_tensorflow/model_cnnlob_2017/: tmp_best_paper_match.weights.h5  weights.weights.h5  weights_A_decpre_a0005_b64_d025.weights.h5  weights_B_zscore_a0003_b16_d000.weights.h5  weights_C_zscore_a0005_b16_d025.weights.h5  weights_D_zscore_a0003_b16_d025.weights.h5  weights_E_zscore_feat_decpre_labels.weights.h5  weights_custom_labels_k20_calibrated_alpha.weights.h5  weights_custom_labels_paper_k20_zscore.weights.h5  weights_k20_custom.weights.h5
